--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Assets\Scripts\Model\ModelChange\FieldModelSetPlayerState.cs" />
     <Compile Include="Assets\Scripts\Model\ModelUpdater.cs" />
     <Compile Include="Assets\Scripts\Model\PlayerAction.cs" />
+    <Compile Include="Assets\Scripts\Model\RollModifier\AbstractModifier.cs" />
     <Compile Include="Assets\Scripts\Model\RollModifier\Armor.cs" />
     <Compile Include="Assets\Scripts\Model\RollModifier\Catch.cs" />
     <Compile Include="Assets\Scripts\Model\RollModifier\Dodge.cs" />
