Clean up RollModifiers.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -203,17 +203,17 @@
     <Compile Include="Assets\Scripts\Model\ModelUpdater.cs" />
     <Compile Include="Assets\Scripts\Model\PlayerAction.cs" />
     <Compile Include="Assets\Scripts\Model\RollModifier\AbstractModifier.cs" />
-    <Compile Include="Assets\Scripts\Model\RollModifier\Armor.cs" />
-    <Compile Include="Assets\Scripts\Model\RollModifier\Catch.cs" />
-    <Compile Include="Assets\Scripts\Model\RollModifier\Dodge.cs" />
-    <Compile Include="Assets\Scripts\Model\RollModifier\Gaze.cs" />
-    <Compile Include="Assets\Scripts\Model\RollModifier\GoForIt.cs" />
-    <Compile Include="Assets\Scripts\Model\RollModifier\Injury.cs" />
-    <Compile Include="Assets\Scripts\Model\RollModifier\Interception.cs" />
-    <Compile Include="Assets\Scripts\Model\RollModifier\Leap.cs" />
-    <Compile Include="Assets\Scripts\Model\RollModifier\Pass.cs" />
-    <Compile Include="Assets\Scripts\Model\RollModifier\Pickup.cs" />
-    <Compile Include="Assets\Scripts\Model\RollModifier\RightStuff.cs" />
+    <Compile Include="Assets\Scripts\Model\RollModifier\ArmorModifier.cs" />
+    <Compile Include="Assets\Scripts\Model\RollModifier\CatchModifier.cs" />
+    <Compile Include="Assets\Scripts\Model\RollModifier\DodgeModifier.cs" />
+    <Compile Include="Assets\Scripts\Model\RollModifier\GazeModifier.cs" />
+    <Compile Include="Assets\Scripts\Model\RollModifier\GoForItModifier.cs" />
+    <Compile Include="Assets\Scripts\Model\RollModifier\InjuryModifier.cs" />
+    <Compile Include="Assets\Scripts\Model\RollModifier\InterceptionModifier.cs" />
+    <Compile Include="Assets\Scripts\Model\RollModifier\LeapModifier.cs" />
+    <Compile Include="Assets\Scripts\Model\RollModifier\PassModifier.cs" />
+    <Compile Include="Assets\Scripts\Model\RollModifier\PickupModifier.cs" />
+    <Compile Include="Assets\Scripts\Model\RollModifier\RightStuffModifier.cs" />
     <Compile Include="Assets\Scripts\Model\SkillType.cs" />
     <Compile Include="Assets\Scripts\Model\Types\ActingPlayer.cs" />
     <Compile Include="Assets\Scripts\Model\Types\BlockDie.cs" />
