Add pushback visualization

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -104,11 +104,14 @@
     <Compile Include="Assets\Scripts\Ffb\Dto\ICommand.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChange.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\ActingPlayerSetPlayerId.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\FieldModelAddPushbackSquare.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\FieldModelRemovePushbackSquare.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\FieldModelSetBallCoordinate.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\FieldModelSetBallInPlay.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\FieldModelSetBallMoving.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\FieldModelSetPlayerCoordinate.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\FieldModelSetPlayerState.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\PushbackSquare.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\NetCommand.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Report.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\AlwaysHungryRoll.cs" />
@@ -195,6 +198,8 @@
     <Compile Include="Assets\Scripts\Model\Ball.cs" />
     <Compile Include="Assets\Scripts\Model\Core.cs" />
     <Compile Include="Assets\Scripts\Model\ModelChange\ActingPlayerSetPlayerId.cs" />
+    <Compile Include="Assets\Scripts\Model\ModelChange\FieldModelAddPushbackSquare.cs" />
+    <Compile Include="Assets\Scripts\Model\ModelChange\FieldModelRemovePushbackSquare.cs" />
     <Compile Include="Assets\Scripts\Model\ModelChange\FieldModelSetBallCoordinate.cs" />
     <Compile Include="Assets\Scripts\Model\ModelChange\FieldModelSetBallInPlay.cs" />
     <Compile Include="Assets\Scripts\Model\ModelChange\FieldModelSetBallMoving.cs" />
@@ -249,6 +254,9 @@
     <Compile Include="Assets\Scripts\UI\LogText\RawString.cs" />
     <Compile Include="Assets\Scripts\UI\LogText\ReRoll.cs" />
     <Compile Include="Assets\Scripts\UI\LogTextGenerator.cs" />
+    <Compile Include="Assets\Scripts\View\PushbackSquare.cs" />
+    <Compile Include="Assets\Scripts\View\ViewObject.cs" />
+    <Compile Include="Assets\Scripts\View\ViewObjectList.cs" />
     <Compile Include="Assets\SettingsHandler.cs" />
     <Compile Include="Assets\TextPanelHandler.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
