--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\InputHandler.cs" />
     <Compile Include="Assets\LoginHandler.cs" />
     <Compile Include="Assets\PlayerHandler.cs" />
+    <Compile Include="Assets\ScoreBoardHandler.cs" />
     <Compile Include="Assets\Scripts\Api\Dto\Auth\Token.cs" />
     <Compile Include="Assets\Scripts\Api\Dto\Coach\Get.cs" />
     <Compile Include="Assets\Scripts\Api\Dto\Match\Current.cs" />
@@ -87,8 +88,10 @@
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\Game.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\GameOptions.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\GameResult.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\InducementSet.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\Player.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\PlayerData.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\PlayerResult.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\Position.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\Roster.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ServerGameState.cs" />
@@ -100,6 +103,7 @@
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ServerTalk.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\ServerVersion.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\Team.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Commands\TeamResult.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Commands\TurnData.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ICommand.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChange.cs" />
@@ -114,7 +118,9 @@
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\FieldModelSetPlayerCoordinate.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\FieldModelSetPlayerState.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\PushbackSquare.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\TeamResultSetScore.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\TrackNumber.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\ModelChanges\TurnDataSetTurnNr.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\NetCommand.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Report.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\AlwaysHungryRoll.cs" />
@@ -210,6 +216,8 @@
     <Compile Include="Assets\Scripts\Model\ModelChange\FieldModelSetBallMoving.cs" />
     <Compile Include="Assets\Scripts\Model\ModelChange\FieldModelSetPlayerCoordinate.cs" />
     <Compile Include="Assets\Scripts\Model\ModelChange\FieldModelSetPlayerState.cs" />
+    <Compile Include="Assets\Scripts\Model\ModelChange\TeamResultSetScore.cs" />
+    <Compile Include="Assets\Scripts\Model\ModelChange\TurnDataSetTurnNr.cs" />
     <Compile Include="Assets\Scripts\Model\ModelUpdater.cs" />
     <Compile Include="Assets\Scripts\Model\PlayerAction.cs" />
     <Compile Include="Assets\Scripts\Model\RollModifier\AbstractModifier.cs" />
