Correct typo for PickupRoll

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -8,7 +8,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <ProjectGuid>{94DA02D0-D149-D651-8254-897F42718523}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -168,7 +169,7 @@
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PassRoll.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PenaltyShootout.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PettyCash.cs" />
-    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PickupRoll.cs" />
+    <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PickUpRoll.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PilingOn.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PlayCard.cs" />
     <Compile Include="Assets\Scripts\Ffb\Dto\Reports\PlayerAction.cs" />
