Refactorization of Player Icon creation.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Assets\Scripts\FFBEnumeration.cs" />
     <Compile Include="Assets\Scripts\IReflectedObject.cs" />
     <Compile Include="Assets\Scripts\Lib\Cache.cs" />
+    <Compile Include="Assets\Scripts\Lib\PlayerIcon.cs" />
     <Compile Include="Assets\Scripts\MainHandler.cs" />
     <Compile Include="Assets\Scripts\Model\Ball.cs" />
     <Compile Include="Assets\Scripts\Model\Core.cs" />
