--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+*.exe
 
 # Crashlytics generated file
 crashlytics-build.properties
@@ -76,3 +77,5 @@ Assets/NuGet
 Assets/NuGet.*
 
 Assets/Plugins/
+
+Builds/
